gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-gateway
  namespace: frontend
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "web.kimdragon50.ml"
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - "web.kimdragon50.ml"
